finish video endpoints
