# apps/api/libs/videos/src/lib/entities/video.entity.ts
@@ -1,11 +1,25 @@
 import { SelectVideo } from '@cs/shared';
+import { ApiProperty } from '@nestjs/swagger';
 
-export class Video implements Partial<SelectVideo> {
-  fileLink!: string;
+export class Video implements SelectVideo {
+  @ApiProperty({ type: Number })
   videoId!: number;
+
+  @ApiProperty({ type: String })
   name!: string;
+
+  @ApiProperty({ type: String })
+  fileLink!: string;
+
+  @ApiProperty({ type: String })
   length!: string;
+
+  @ApiProperty({ type: String })
   description!: string;
+
+  @ApiProperty({ type: Date })
   createdAt!: Date;
-  courseId!: number | null;
+
+  @ApiProperty({ type: Number })
+  courseId!: number;
 }
